@@ -2,7 +2,9 @@ CHANGELOG
 
 Version 1.0
 -------------------------------------------------------------------------------
-
+* Removed Update Location button and made location update automatically on
+  marker change.
+* Added restore button to restore values to value it had on page load.
 
 Version 1.0beta1
 -------------------------------------------------------------------------------
